# mingai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PHASE1-AUDIT-REPORT.md  README.md  check-agents.mjs  docker-compose.yml  mingai-audit-2.cjs  mingai-audit.cjs  package.json  playwright.config.ts  pyproject.toml
src/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
src/backend/.claude/learning/: identity.json  observations.jsonl
src/backend/alembic/: env.py
src/backend/alembic/versions/: v001_initial_schema.py  v002_rls_policies.py  v003_har_keypair_columns.py  v004_llm_profile_status.py  v005_agent_cards_studio_columns.py  v006_notifications_table.py  v007_registry_columns.py  v008_disputes_table.py  v009_llm_library.py  v010_usage_events.py  v011_semantic_cache.py  v012_semantic_cache_version_tag.py  v013_cache_analytics_events.py  v014_tenant_health_scores.py  v015_notifications_platform_outreach.py  v016_cost_summary_daily.py  v017_cost_summary_gross_margin.py  v018_azure_cost_mgmt.py  v019_cost_alert_configs.py  v020_agent_templates.py  v021_agent_template_versioning.py  v022_agent_cards_template_name.py  v023_template_performance_daily.py  v024_issue_reports_metadata_index.py  v025_analytics_events.py  v026_tool_catalog.py  v027_kb_access_control.py  v028_agent_access_control.py  v029_access_requests.py  v030_agent_cards_har_columns.py  v032_issue_embeddings.py  v033_consent_events.py  v034_notification_preferences.py  v035_user_privacy_settings.py  v036_mcp_servers.py  v037_users_auth0_user_id.py  v038_user_delegations.py  v039_llm_providers.py  v040_search_index_registry.py  v041_search_chunks.py  (+23 more)
src/backend/app/: main.py
src/backend/app/api/: router.py
src/backend/app/core/: bootstrap.py  cache.py  cache_search.py  cache_utils.py  circuit_breaker.py  config.py  credential_scrubber.py  crypto.py  database.py  dependencies.py  glossary_config.py  health.py  local_storage_routes.py  logging.py  middleware.py  redis_client.py  schema.py  seeds.py  session.py  storage.py  tenant_config_service.py  tenant_middleware.py
src/backend/scripts/: check_redis_aof.sh  migrate_users_to_auth0.py
src/backend/tests/: conftest.py
src/backend/tests/e2e/: test_glossary_e2e.py  test_memory_e2e.py  test_registry_e2e.py
src/backend/tests/fixtures/: vector_search_fixtures.py
src/backend/tests/integration/: conftest.py  test_a2a_discovery.py  test_a2a_transaction_flow.py  test_agent_deploy_access_control.py  test_agent_management.py  test_analytics_routes.py  test_api_contracts.py  test_audit_log_routes.py  test_audit_tamper_evidence.py  test_auth0_jwks.py  test_byollm_activation_requires_required_slots.py  test_byollm_cross_tenant_isolation.py  test_byollm_security.py  test_cache_analytics.py  test_cache_integration.py  test_cache_invalidation_on_library_deprecate.py  test_cache_invalidation_on_profile_update.py  test_cache_warming_integration.py  test_concurrent_profile_update.py  test_conversation_doc_upload.py  test_cost_tracking.py  test_credential_deploy_validation.py  test_credential_never_returned.py  test_cross_tenant_isolation.py  test_distributed_lock.py  test_embedding_cache.py  test_gdpr_erasure.py  test_gdpr_team_memory.py  test_glossary_cache_integration.py  test_glossary_crud.py  test_glossary_pipeline.py  test_glossary_pipeline_integration.py  test_glossary_rollout_flag.py  test_guardrail_enforcement.py  test_har_a2a_integration.py  test_health_check_degraded_shows_warning.py  test_health_score_api.py  test_issue_stream_integration.py  test_jwt_dual_acceptance.py  test_kb_binding_resolution.py  (+30 more)
src/backend/tests/regression/: test_a2a_proxy_security.py  test_agent_security_round2.py  test_agent_security_round3.py  test_llm_profile_cache_invalidation.py
src/backend/tests/unit/: test_a2a_routing.py  test_a2a_schema_validation.py  test_access_requests.py  test_active_team_session.py  test_admin_analytics.py  test_agent_access_api.py  test_agent_access_check.py  (+187 more)
(+2036 files in other folders)
